# dbr

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  dbr.desktop  dbr.desktop.in  dbr.spec  dbr.spec.in
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  control  copyright
docs/spanish/: ayuda.html  datos_de_produccion.html  licencia.html
icons/: Makefile  Makefile.am  Makefile.in
po/: .intltool-merge-cache  ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  es.gmo  es.po  gl.gmo  gl.po  hu.po
src/: Makefile  Makefile.am  Makefile.in  __init__.py  book.py  controlador.py  controlador.py.in  controller.py.in  dbr  dbr.in  dbr.py  dbr_i18n.py  dbr_i18n.py.in  player.py  registro.py  reproductor.py  settings.py  view.py.in  vista.py
src/utils/: lowercase_files.py  uppercase_files.py
